--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 project(webserver)
 
+find_package(Threads REQUIRED)
+
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -g)
 set(CMAKE_CXX_STANDARD 17)
 
@@ -9,7 +11,7 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 # 配置头文件搜索路径
 include_directories(${PROJECT_SOURCE_DIR}/include)
-include_directories(${PROJECT_SOURCE_DIR}/log)
+include_directories(${PROJECT_SOURCE_DIR}/include/log)
 
 # 设置生成clangd所需的comlile_commands.json
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
