完成了定时器的部分，并对其进行了测试

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,11 +6,14 @@ find_package(Threads REQUIRED)
 set(SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 set(BUFFER_DIR ${SRC_DIR}/buffer.cpp)
 set(LOG_DIR ${SRC_DIR}/log.cpp)
+set(TIMER_DIR ${SRC_DIR}/timer.cpp)
 
 add_executable(buffertest buffertest.cpp ${BUFFER_DIR})
 add_executable(logtest logtest.cpp ${LOG_DIR} ${BUFFER_DIR})
+add_executable(timertest timertest.cpp ${TIMER_DIR} ${LOG_DIR} ${BUFFER_DIR})
 
 target_link_libraries(logtest Threads::Threads)
+target_link_libraries(timertest Threads::Threads)
 
 target_include_directories(buffertest PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(logtest PUBLIC ${PROJECT_SOURCE_DIR}/include)
