--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ aux_source_directory(. SRC_LIST)
 
 add_executable(webserver ${SRC_LIST})
 
-target_link_libraries(webserver Threads::Threads)
+target_link_libraries(webserver Threads::Threads mysqlclient)
