完成epooler类，修改CMake文件添加和测试`epollertest`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,12 +11,14 @@ set(POOL_DIR ${PROJECT_SOURCE_DIR}/include/pool)
 set(THREADPOOL_DIR ${POOL_DIR}/threadpool.hpp)
 set(SQLCONNPOOL_DIR ${SRC_DIR}/sqlconnpool.cpp)
 set(SQLCONNRAII_DIR ${POOL_DIR}/sqlconnRAII.hpp)
+set(EPOLLER_DIR ${SRC_DIR}/server/epoller.cpp)
 
 add_executable(buffertest buffertest.cpp ${BUFFER_DIR})
 add_executable(logtest logtest.cpp ${LOG_DIR} ${BUFFER_DIR})
 add_executable(timertest timertest.cpp ${TIMER_DIR} ${LOG_DIR} ${BUFFER_DIR})
 add_executable(threadpooltest threadpooltest.cpp ${THREADPOOL_DIR})
 add_executable(sqlconntest sqlconntest.cpp ${SQLCONNRAII_DIR} ${SQLCONNPOOL_DIR} ${LOG_DIR} ${BUFFER_DIR})
+add_executable(epollertest epollertest.cpp ${EPOLLER_DIR})
 
 target_link_libraries(logtest Threads::Threads)
 target_link_libraries(timertest Threads::Threads)
